fixing grid layout issues

--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,9 @@ body {
   padding: 1rem;
 
   display: grid;
-  grid-template-columns:2fr 0fr 0fr;
+  grid-template-columns:1fr 0fr 0fr;
   grid-template-rows: 1fr 0fr 0fr;
+  transition: grid-template-columns 2s ease-in, grid-template-rows 2s ease-in;
 }
 
 section {
@@ -32,6 +33,12 @@ section div {
   flex-direction: column;
 }
 
+section div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5cqi
+}
+
 .cabinet-section {
   margin-top: 100%;
   align-self: center;
@@ -39,19 +46,49 @@ section div {
   background-color: gray;
 }
 
-/* Define the container */
 .container {
   contain: layout inline-size;
   container-type: inline-size;
 }
 
-/* Adjust font sizes using container query units */
 h1 {
   margin-top: auto;
-  font-size: 12cqw; /* 8% of the container's inline size */
+  font-size: 12cqi;
 }
 
 h2 {
-  font-size: 6cqw; /* 5% of the container's inline size */
+  font-size: 6cqi;
 }
 
+@media screen and (max-width: 768px) {
+  /* body {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr
+  } */
+
+  .hero-section h1 {
+    margin: initial
+  }
+
+  .hero-section div:nth-of-type(1) {
+    height: fit-content
+  }
+
+  .cabinet-section {
+    margin-top: 1rem;
+    height: 75%;
+    justify-self: center;
+  }
+
+  .call-section div:nth-of-type(1) {
+    display: none;
+  }
+
+  h1 {
+    font-size: 10cqi;
+  }
+
+  h2 {
+    font-size: 5cqi;
+  }
+}
